--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
     <div class="container">
       <div id="menu"></div>
     </div>
-    <h1 style="color: aliceblue;">Fliperama</h1>
+    <h1 style="color: aliceblue; padding-top: 2rem; font-weight: bold;">Fliperama</h1>
   <div class="container">
     <img style="width:300px;" src="imagens/fliperama.png" alt="fliperama">
   </div>
