--- a/Cliente/formAddCliente.html
+++ b/Cliente/formAddCliente.html
@@ -17,10 +17,15 @@
   </script>
 </head>
 
-<body style="font-family: sans-serif; text-align: center; margin-top: 50px; background-color: rgb(106, 106, 106);">
-    <div class="container">
-      <div id="menu"></div>
-    </div>
+<style>
+    body {
+      background-color: black;
+      color: white;
+      font-family: Arial, sans-serif;
+    }
+  </style>
+<body style="font-family: sans-serif; text-align: center; margin-top: 10px;">
+      <div class="container"; id="menu"></div>
     <h1 style="color: aliceblue;">Cadastro de novo Cliente</h1>
     <div class="container">
         <form action="addCliente.php" method="post">
@@ -36,5 +41,6 @@
         <input type="submit" value="Cadastrar">
   </form>
   </div>
+  <div class="container"><a href="../index.html" class="btn btn-primary">Voltar para o Início</a></div>
 </body>
 </html>
