--- a/Cliente/formEditCliente.html
+++ b/Cliente/formEditCliente.html
@@ -35,10 +35,15 @@ if (!$cliente) {
   </script>
 </head>
 
-<body style="font-family: sans-serif; text-align: center; margin-top: 50px; background-color: rgb(106, 106, 106);">
-    <div class="container">
-      <div id="menu"></div>
-    </div>
+<style>
+    body {
+      background-color: black;
+      color: white;
+      font-family: Arial, sans-serif;
+    }
+  </style>
+<body style="font-family: sans-serif; text-align: center; margin-top: 10px;">
+      <div class="container"; id="menu"></div>
     <h1 style="color: aliceblue;">Editar Informações de Cliente</h1>
     <div class="container">
   <form action="editCliente.php" method="post">
@@ -56,5 +61,6 @@ if (!$cliente) {
     <input type="submit" value="Salvar Alterações">
   </form>
   </div>
+  <div class="container"><a href="../index.html" class="btn btn-primary">Voltar para o Início</a></div>
 </body>
 </html>
