--- a/index.html
+++ b/index.html
@@ -16,12 +16,9 @@
     });
   </script>
 </head>
-
-<body style="font-family: sans-serif; text-align: center; margin-top: 50px; background-color: black;">
-    <div class="container">
-      <div id="menu"></div>
-    </div>
-    <h1 style="color: aliceblue; padding-top: 2rem; font-weight: bold;">Fliperama</h1>
+<body style="font-family: sans-serif; text-align: center; margin-top: 10px; background-color: black;">
+      <div class="container"; id="menu"></div>
+    <h1 style="color: rgb(255, 136, 0); padding-top: 2rem; font-weight: bold;">FLIPERAMA</h1>
   <div class="container">
     <img style="width:300px;" src="imagens/fliperama.png" alt="fliperama">
   </div>
