--- a/navbar.html
+++ b/navbar.html
@@ -1,18 +1,14 @@
-<!DOCTYPE html>
-<html lang="pt-br">
-<head>
+
     <link href="bootstrap/css/bootstrap.css" rel="stylesheet">
     <script src="bootstrap/js/popper.min.js"></script>
     <script src="bootstrap/js/bootstrap.js"></script>
     <script src="bootstrap/js/jquery.min.js"></script>
-</head>
-<body>
-    <nav class="navbar navbar-expand-lg navbar-light bg-light rounded">
+    <nav class="navbar navbar-expand-lg navbar-dark bg-dark" style="background-color: #000 !important;">
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarsExample10"
             aria-controls="navbarsExample10" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
         </button>
-        <a class="navbar-brand" href="#" rel="home">
+        <a class="navbar-brand text-white" href="#" rel="home">
             <img style="max-width:100px; margin-top: -7px;" src="imagens/logo.png" alt="Logo">
         </a>
         <div class="collapse navbar-collapse justify-content-md-center" id="navbarsExample10">
@@ -63,5 +59,4 @@
             </ul>
         </div>
     </nav>
-</body>
-</html>
+
