--- a/Cliente/pesquisarCliente.html
+++ b/Cliente/pesquisarCliente.html
@@ -17,11 +17,17 @@
   </script>
 </head>
 
-<body style="font-family: sans-serif; text-align: center; margin-top: 50px; background-color: rgb(106, 106, 106);">
-    <div class="container">
-      <div id="menu"></div>
-    </div>
+<style>
+    body {
+      background-color: black;
+      color: white;
+      font-family: Arial, sans-serif;
+    }
+  </style>
+<body style="font-family: sans-serif; text-align: center; margin-top: 10px;">
+      <div class="container"; id="menu"></div>
   <h2>Pesquisar Cliente pelo Nome</h2>
+
   <div class="container">
   <form action="mostrarPesquisaCliente.php" method="post">
     <label for="nome">Nome:</label><br>
@@ -29,5 +35,6 @@
     <input type="submit" value="Pesquisar">
   </form>
   </div>
+  <div class="container"><a href="../index.html" class="btn btn-primary">Voltar para o Início</a></div>
 </body>
 </html>
