--- a/Funcionario/formAddFuncionario.html
+++ b/Funcionario/formAddFuncionario.html
@@ -28,18 +28,18 @@
       <div class="container"; id="menu"></div>
     <h1 style="color: aliceblue;">Cadastro de novo Funcionario</h1>
     <div class="container">
-        <form action="addCliente.php" method="post">
-        <label for="nome_func">Nome do Funcionário:</label><br>
-        <input type="text" id="nome_func" name="nome_func" required><br><br>
+        <form action="addFuncionario.php" method="post">
+        <label for="nome">Nome do Funcionário:</label><br>
+        <input type="text" id="nome" name="nome" required><br><br>
 
         <label for="turno">Turno:</label><br>
         <input type="text" id="turno" name="turno" required><br><br>
 
-        <label for="telefone">Cargo:</label><br>
+        <label for="cargo">Cargo:</label><br>
         <input type="text" id="cargo" name="cargo" required><br><br>
 
         <input type="submit" value="Cadastrar">
-  </form>
+       </form>
   </div>
   <div class="container"><a href="../index.html" class="btn btn-primary">Voltar para o Início</a></div>
 </body>
