--- a/Maquina/formAddMaquina.html
+++ b/Maquina/formAddMaquina.html
@@ -31,6 +31,7 @@
     <label for="numero_serie">Número de Série:</label><br>
     <input type="text" name="numero_serie" required><br><br>
 
+    <p style="color: lightcoral;">CUIDADO! Escolha um ID existente</p>
     <label for="id_jogo">ID do Jogo (FK):</label><br>
     <input type="number" name="id_jogo" required><br><br>
 
