--- a/navbar.html
+++ b/navbar.html
@@ -31,7 +31,7 @@
                         Funcionário
                     </a>
                     <div class="dropdown-menu" aria-labelledby="dropdown10">
-                        <a class="dropdown-item" href="Funcionario/formAddFuncionario.html">Cadastrar Usuário</a>
+                        <a class="dropdown-item" href="Funcionario/formAddFuncionario.html">Cadastrar Funcionário</a>
                         <a class="dropdown-item" href="Funcionario/exibirFuncionario.php">Listar Funcionários</a>
                         <a class="dropdown-item" href="Funcionario/pesquisarFuncionario.html">Pesquisar Funcionários</a>
                     </div>
@@ -43,7 +43,7 @@
                     <div class="dropdown-menu" aria-labelledby="dropdown10">
                         <a class="dropdown-item" href="Maquina/formAddMaquina.html">Cadastrar Máquina</a>
                         <a class="dropdown-item" href="Maquina/exibirMaquina.php">Listar Máquinas</a>
-                        <a class="dropdown-item" href="Maquina/pesquisarCliente.html">Pesquisar Máquinas</a>
+                        <a class="dropdown-item" href="Maquina/pesquisarMaquina.html">Pesquisar Máquinas</a>
                     </div>
                 </li>
                 <li class="nav-item dropdown">
@@ -53,7 +53,7 @@
                     <div class="dropdown-menu" aria-labelledby="dropdown10">
                         <a class="dropdown-item" href="Jogo/formAddJogo.html">Cadastrar Jogo</a>
                         <a class="dropdown-item" href="Jogo/exibirJogo.php">Listar Jogos</a>
-                        <a class="dropdown-item" href="Jogo/pesquisarJogoo.html">Pesquisar Jogos</a>
+                        <a class="dropdown-item" href="Jogo/pesquisarJogo.html">Pesquisar Jogos</a>
                     </div>
                 </li>
             </ul>
