--- a/Funcionario/pesquisarFuncionario.html
+++ b/Funcionario/pesquisarFuncionario.html
@@ -29,9 +29,9 @@
   <h2>Pesquisar Funcionario pelo Nome</h2>
 
   <div class="container">
-  <form action="mostrarPesquisaCliente.php" method="post">
-    <label for="nome_func">Nome do Funcionário:</label><br>
-    <input type="text" id="nome_func" name="nome_func" required><br><br>
+  <form action="mostrarPesquisaFuncionario.php" method="post">
+    <label for="nome">Nome do Funcionário:</label><br>
+    <input type="text" id="nome" name="nome" required><br><br>
     <input type="submit" value="Pesquisar">
   </form>
   </div>
