--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     });
   </script>
 </head>
-<body style="font-family: sans-serif; text-align: center; margin-top: 10px; background-color: black;">
+<body style="font-family: sans-serif; text-align: center; margin-top: 10px; background-color: rgb(0, 0, 0);">
       <div class="container"; id="menu"></div>
     <h1 style="color: rgb(255, 136, 0); padding-top: 2rem; font-weight: bold;">FLIPERAMA</h1>
   <div class="container">
